[gd_scene load_steps=4 format=2]

[ext_resource path="res://Projectiles/projectile_good.png" type="Texture" id=1]
[ext_resource path="res://Projectiles/AllyProjectile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.062, 31.2219 )

[node name="AllyProjectile" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 8
collision_mask = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteContainer"]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.16162, 3.16942 )

[connection signal="body_entered" from="." to="." method="_on_AllyProjectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
